add: 搜索框显示隐藏

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
     background-color: transparent;
   }
 
+  html {
+    font-size: 16px;
+  }
+
 
   /* -webkit-scrollbar ​滚动条整体部分
 ​-webkit-scrollbar-button​ 滚动条两端的按钮
